# athena-jit

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
athena/: __init__.py  api.py  compiler.py  optimizer.py  tracer.py
benchmarks/: compare_jax.py
tests/: test_codegen.py  test_compiler.py  test_jit_api.py  test_optimizer.py  test_simd.py  test_tracer.py
